[package]
name = "torrent"
version = "0.1.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_urlencoded = "^0.7.0"
log = "^0.4"
pretty_env_logger = "^0.4"
sha-1 = "0.9"
percent-encoding = "^2.1.0"
reqwest = { version = "0.11" }
anyhow = "*"
rand = "0.8.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"